--- a/.wwhrd.yml
+++ b/.wwhrd.yml
@@ -31,7 +31,9 @@ exceptions:
   - github.com/LeanerCloud/ec2-instances-info/data # MIT: https://github.com/powdahound/ec2instances.info/blob/master/LICENSE.
   - github.com/acomagu/bufpipe # MIT: https://github.com/acomagu/bufpipe/blob/master/LICENSE (used by go-git)
   - github.com/gosimple/slug # MPL-2.0. Required for https://github.com/grafana-tools/sdk
+  - github.com/hashicorp/errwrap # MPL-2.0
   - github.com/hashicorp/go-cleanhttp # MPL-2.0
+  - github.com/hashicorp/go-multierror # MPL-2.0
   - github.com/hashicorp/go-version # MPL-2.0
   - github.com/hashicorp/golang-lru # MPL-2.0
   - github.com/hashicorp/golang-lru/simplelru # MPL-2.0
