--- a/charts/monitoring/prometheus/templates/statefulset.yaml
+++ b/charts/monitoring/prometheus/templates/statefulset.yaml
@@ -31,9 +31,9 @@ spec:
         app: {{ template "name" . }} # deprecated
         app.kubernetes.io/name: prometheus
         app.kubernetes.io/instance: {{ template "name" . }}
-        {{- if .Values.prometheus.thanos.enabled }}
-        thanos.io/store-api: 'true'
-        {{- end }}
+        {{- if .Values.prometheus.podLabels}}
+        {{ toYaml .Values.prometheus.podLabels | nindent 8 }}
+        {{- end}}
       annotations:
         prometheus.io/scrape: 'true'
         prometheus.io/port: '9090'
@@ -60,38 +60,6 @@ spec:
           echo "Cleaning up block compaction leftovers..."
           find /var/prometheus/data -type d -name '*.tmp' -maxdepth 1 -print -exec rm -r {} \;
 
-          {{- if .Values.prometheus.thanos.enabled }}
-          config=/etc/prometheus-shared/prometheus.yaml
-
-          echo "Waiting up to 60 seconds for $config..."
-          for i in $(seq 60); do
-            [ -f $config ] && break
-            sleep 1
-          done
-
-          if [ ! -f $config ]; then
-            echo "File does not exist, giving up. Check the Thanos sidecar for possible errors."
-            exit 1
-          fi
-
-          echo "Configuration found, starting Prometheus..."
-          exec /bin/prometheus \
-            --config.file=$config \
-            --storage.tsdb.no-lockfile \
-            --storage.tsdb.path=/var/prometheus/data \
-            --storage.tsdb.retention.time={{ .Values.prometheus.tsdb.retentionTime | default "24h" }} \
-            --storage.tsdb.min-block-duration=2h \
-            --storage.tsdb.max-block-duration=2h \
-            {{- if .Values.prometheus.tsdb.compressWAL }}
-            --storage.tsdb.wal-compression \
-            {{- end }}
-            --web.enable-lifecycle \
-            --web.external-url=https://{{ .Values.prometheus.host | trim }} \
-            --web.enable-admin-api \
-          {{- range $key, $value := .Values.prometheus.extraArgs }}
-            --{{ $key }}={{ $value }} \
-          {{ end }}
-          {{- else }}
           echo "Starting Prometheus..."
           exec /bin/prometheus \
             --config.file=/etc/prometheus/config/prometheus.yaml \
@@ -102,14 +70,15 @@ spec:
             --storage.tsdb.wal-compression \
             {{- end }}
             --web.enable-lifecycle \
-            {{- if .Values.prometheus.backup.enabled }}
             --web.enable-admin-api \
-            {{- end }}
             --web.external-url=https://{{ .Values.prometheus.host | trim }} \
             {{- range $key, $value := .Values.prometheus.extraArgs }}
             --{{ $key }}={{ $value }} \
-            {{ end }}
-          {{- end }}
+            {{- end }}
+      {{- if .Values.prometheus.env }}
+        env:
+{{ toYaml .Values.prometheus.env | indent 10}}
+      {{- end }}
         ports:
         - containerPort: 9090
           name: web
@@ -158,7 +127,6 @@ spec:
         {{- end }}
         {{- end }}
 
-      {{- if not .Values.prometheus.thanos.enabled }}
       - name: reloader
         image: '{{ .Values.prometheus.configReloaderImage.repository }}:{{ .Values.prometheus.configReloaderImage.tag }}'
         imagePullPolicy: {{ .Values.prometheus.configReloaderImage.pullPolicy }}
@@ -182,7 +150,6 @@ spec:
           readOnly: true
         {{- end }}
         {{- end }}
-      {{- end }}
 
       {{- if .Values.prometheus.backup.enabled }}
       - name: backup
@@ -206,54 +173,16 @@ spec:
 {{ toYaml .Values.prometheus.containers.backup.resources | indent 10 }}
       {{- end }}
 
-      {{- if .Values.prometheus.thanos.enabled }}
-      - name: thanos
-        image: '{{ .Values.prometheus.thanos.image.repository }}:{{ .Values.prometheus.thanos.image.tag }}'
-        args:
-        - sidecar
-        - --tsdb.path=/prometheus
-        - --prometheus.url=http://localhost:9090
-        - --objstore.config-file=/etc/thanos/objstore.yaml
-        - --reloader.config-file=/etc/prometheus/config/prometheus.yaml
-        - --reloader.config-envsubst-file=/etc/prometheus-shared/prometheus.yaml
-        # New flag for migrating old blocks.
-        #- --shipper.upload-compacted-once
-        env:
-        - name: POD_NAME
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.name
-        ports:
-        - name: http-sidecar
-          containerPort: 10902
-        - name: grpc
-          containerPort: 10901
-        volumeMounts:
-        - name: db
-          mountPath: /prometheus
-          readOnly: false
-          subPath: prometheus-db
-        - name: config-shared
-          mountPath: /etc/prometheus-shared
-        - name: config
-          mountPath: /etc/prometheus/config
-        - name: thanos
-          mountPath: /etc/thanos
-        securityContext:
-          runAsNonRoot: false
-          runAsUser: 0
-        livenessProbe:
-          httpGet:
-            path: /-/healthy
-            port: http-sidecar
-        readinessProbe:
-          httpGet:
-            path: /-/ready
-            port: http-sidecar
-        resources:
-{{ toYaml .Values.prometheus.containers.thanosSidecar.resources | indent 10 }}
+  {{- if .Values.prometheus.sidecarContainers }}
+    {{- range $name, $spec :=  .Values.prometheus.sidecarContainers }}
+      - name: {{ $name }}
+      {{- if kindIs "string" $spec }}
+        {{- tpl $spec $ | nindent 8 }}
+      {{- else }}
+        {{- toYaml $spec | nindent 8 }}
       {{- end }}
-
+    {{- end }}
+  {{- end }}
       serviceAccountName: '{{ template "name" . }}'
       securityContext:
         fsGroup: 2000
@@ -281,13 +210,6 @@ spec:
       {{- if .Values.prometheus.backup.enabled }}
       - name: backup
         emptyDir: {}
-      {{- end }}
-      {{- if .Values.prometheus.thanos.enabled }}
-      - name: config-shared
-        emptyDir: {}
-      - name: thanos
-        secret:
-          secretName: '{{ template "name" . }}-thanos'
       {{- end }}
       nodeSelector:
 {{ toYaml .Values.prometheus.nodeSelector | indent 8 }}
