--- a/charts/monitoring/prometheus/templates/statefulset.yaml
+++ b/charts/monitoring/prometheus/templates/statefulset.yaml
@@ -31,6 +31,9 @@ spec:
         app: {{ template "name" . }} # deprecated
         app.kubernetes.io/name: prometheus
         app.kubernetes.io/instance: {{ template "name" . }}
+        {{- if .Values.prometheus.podLabels}}
+        {{ toYaml .Values.prometheus.podLabels | nindent 8 }}
+        {{- end}}
       annotations:
         prometheus.io/scrape: 'true'
         prometheus.io/port: '9090'
@@ -67,13 +70,15 @@ spec:
             --storage.tsdb.wal-compression \
             {{- end }}
             --web.enable-lifecycle \
-            {{- if .Values.prometheus.backup.enabled }}
             --web.enable-admin-api \
-            {{- end }}
             --web.external-url=https://{{ .Values.prometheus.host | trim }} \
             {{- range $key, $value := .Values.prometheus.extraArgs }}
             --{{ $key }}={{ $value }} \
-            {{ end }}
+            {{- end }}
+      {{- if .Values.prometheus.env }}
+        env:
+{{ toYaml .Values.prometheus.env | indent 10}}
+      {{- end }}
         ports:
         - containerPort: 9090
           name: web
@@ -162,6 +167,16 @@ spec:
 {{ toYaml .Values.prometheus.containers.backup.resources | indent 10 }}
       {{- end }}
 
+  {{- if .Values.prometheus.sidecarContainers }}
+    {{- range $name, $spec :=  .Values.prometheus.sidecarContainers }}
+      - name: {{ $name }}
+      {{- if kindIs "string" $spec }}
+        {{- tpl $spec $ | nindent 8 }}
+      {{- else }}
+        {{- toYaml $spec | nindent 8 }}
+      {{- end }}
+    {{- end }}
+  {{- end }}
       serviceAccountName: '{{ template "name" . }}'
       securityContext:
         fsGroup: 2000
