--- a/cmd/kubeletdnat-controller/Dockerfile.multiarch
+++ b/cmd/kubeletdnat-controller/Dockerfile.multiarch
@@ -33,6 +33,9 @@ LABEL maintainer="support@kubermatic.com"
 
 RUN apk add -u --no-cache iptables
 
+# update to 3.0.9-r2 to fix CVE-2023-2975
+RUN apk upgrade -U libcrypto3 libssl3
+
 COPY --from=builder /go/src/k8c.io/kubermatic/cmd/kubeletdnat-controller/_build/kubeletdnat-controller /usr/local/bin/kubeletdnat-controller
 
 ENTRYPOINT ["/usr/local/bin/kubeletdnat-controller"]
