--- a/cmd/kubeletdnat-controller/Dockerfile
+++ b/cmd/kubeletdnat-controller/Dockerfile
@@ -16,4 +16,8 @@ FROM docker.io/alpine:3.17
 LABEL maintainer="support@kubermatic.com"
 
 RUN apk add -u --no-cache iptables
+
+# update to 3.0.9-r2 to fix CVE-2023-2975
+RUN apk upgrade -U libcrypto3 libssl3
+
 COPY ./_build/kubeletdnat-controller /usr/local/bin/kubeletdnat-controller
