--- a/cmd/network-interface-manager/Dockerfile
+++ b/cmd/network-interface-manager/Dockerfile
@@ -15,5 +15,8 @@
 FROM docker.io/alpine:3.17
 LABEL maintainer="support@kubermatic.com"
 
+# update to 3.0.9-r2 to fix CVE-2023-2975
+RUN apk upgrade -U libcrypto3 libssl3
+
 COPY ./_build/network-interface-manager /usr/local/bin/network-interface-manager
 
