--- a/cmd/nodeport-proxy/Dockerfile
+++ b/cmd/nodeport-proxy/Dockerfile
@@ -15,6 +15,9 @@
 FROM docker.io/alpine:3.17
 LABEL maintainer="support@kubermatic.com"
 
+# update to 3.0.9-r2 to fix CVE-2023-2975
+RUN apk upgrade -U libcrypto3 libssl3
+
 ADD ./_build/lb-updater /
 ADD ./_build/envoy-manager /
 ADD ./envoy.yaml /
