--- a/.golangci.yml
+++ b/.golangci.yml
@@ -90,10 +90,11 @@ issues:
 
 linters-settings:
   depguard:
-    include-go-root: true
-    packages:
-      - io/ioutil # https://go.dev/doc/go1.16#ioutil
-      - github.com/ghodss/yaml # use sigs.k8s.io/yaml instead
+    rules:
+      main:
+        deny:
+          - { pkg: io/ioutil, desc: https://go.dev/doc/go1.16#ioutil }
+          - { pkg: github.com/ghodss/yaml, desc: use sigs.k8s.io/yaml instead }
 
   importas:
     no-unaliased: true
