--- a/pkg/crd/k8c.io/apps.kubermatic.k8c.io_applicationdefinitions.yaml
+++ b/pkg/crd/k8c.io/apps.kubermatic.k8c.io_applicationdefinitions.yaml
@@ -34,6 +34,9 @@ spec:
             spec:
               description: ApplicationDefinitionSpec defines the desired state of ApplicationDefinition.
               properties:
+                defaultDeploy:
+                  description: DefaultDeploy deploys the application by default on every cluster
+                  type: boolean
                 defaultDeployOptions:
                   description: DefaultDeployOptions holds the settings specific to the templating method used to deploy the application. These settings can be overridden in applicationInstallation.
                   properties:
@@ -54,13 +57,25 @@ spec:
                           type: boolean
                       type: object
                   type: object
+                defaultName:
+                  description: DefaultName is the default application name
+                  type: string
+                defaultNamespace:
+                  description: DefaultNamespace to deploy the application in
+                  type: string
                 defaultValues:
                   description: DefaultValues describe overrides for manifest-rendering in UI when creating an application.
                   type: object
                   x-kubernetes-preserve-unknown-fields: true
+                defaultVersion:
+                  description: DefaultVersion to deploy the application with
+                  type: string
                 description:
                   description: Description of the application. what is its purpose
                   type: string
+                enforce:
+                  description: Enforce enforces the application by default on every cluster
+                  type: boolean
                 method:
                   description: Method used to install the application
                   enum:
@@ -212,7 +227,7 @@ spec:
                                         type: object
                                         x-kubernetes-map-type: atomic
                                       registryConfigFile:
-                                        description: RegistryConfigFile holds the ref and key in the secret for the registry credential file. The value is dockercfg file that follows the same format rules as ~/.docker/config.json The The Secret must exist in the namespace where KKP is installed (default is "kubermatic"). The Secret must be annotated with `apps.kubermatic.k8c.io/secret-type:` set to helm or git
+                                        description: RegistryConfigFile holds the ref and key in the secret for the registry credential file. The value is dockercfg file that follows the same format rules as ~/.docker/config.json The Secret must exist in the namespace where KKP is installed (default is "kubermatic"). The Secret must be annotated with `apps.kubermatic.k8c.io/secret-type:` set to helm or git
                                         properties:
                                           key:
                                             description: The key of the secret to select from.  Must be a valid secret key.
@@ -277,7 +292,7 @@ spec:
                                     type: object
                                     x-kubernetes-map-type: atomic
                                   registryConfigFile:
-                                    description: RegistryConfigFile holds the ref and key in the secret for the registry credential file. The value is dockercfg file that follows the same format rules as ~/.docker/config.json The The Secret must exist in the namespace where KKP is installed (default is "kubermatic"). The Secret must be annotated with `apps.kubermatic.k8c.io/secret-type:` set to helm or git
+                                    description: RegistryConfigFile holds the ref and key in the secret for the registry credential file. The value is dockercfg file that follows the same format rules as ~/.docker/config.json The Secret must exist in the namespace where KKP is installed (default is "kubermatic"). The Secret must be annotated with `apps.kubermatic.k8c.io/secret-type:` set to helm or git
                                     properties:
                                       key:
                                         description: The key of the secret to select from.  Must be a valid secret key.
@@ -323,7 +338,12 @@ spec:
                     type: object
                   type: array
               required:
+                - defaultDeploy
+                - defaultName
+                - defaultNamespace
+                - defaultVersion
                 - description
+                - enforce
                 - method
                 - versions
               type: object
