--- a/charts/monitoring/prometheus/rules/kubermatic-seed-kubermatic.yaml
+++ b/charts/monitoring/prometheus/rules/kubermatic-seed-kubermatic.yaml
@@ -52,8 +52,8 @@ groups:
           message: Addon {{ $labels.addon }} in cluster {{ $labels.cluster }} has no related resources created for more than 30min.
           runbook_url: https://docs.kubermatic.com/kubermatic/main/cheat-sheets/alerting-runbook/#alert-kubermaticaddonreconciliationtakestoolong
         expr: |
-          kubermatic_addon_reconcile_failed * on(cluster) group_left() kubermatic_cluster_created
-          - kubermatic_addon_reconcile_failed * on(cluster) group_left() kubermatic_cluster_deleted
+          kubermatic_addon_reconcile_failed * on(cluster) group_left() max by(cluster) (kubermatic_cluster_created)
+          - kubermatic_addon_reconcile_failed * on(cluster) group_left() max by(cluster) (kubermatic_cluster_deleted)
           > 0
         for: 30m
         labels:
