--- a/charts/monitoring/prometheus/rules/src/kubermatic-seed/kubermatic.yaml
+++ b/charts/monitoring/prometheus/rules/src/kubermatic-seed/kubermatic.yaml
@@ -70,8 +70,8 @@ groups:
             resources created for more than 30min.
           runbook_url: https://docs.kubermatic.com/kubermatic/main/cheat-sheets/alerting-runbook/#alert-kubermaticaddonreconciliationtakestoolong
         expr: |
-          kubermatic_addon_reconcile_failed * on(cluster) group_left() kubermatic_cluster_created
-          - kubermatic_addon_reconcile_failed * on(cluster) group_left() kubermatic_cluster_deleted
+          kubermatic_addon_reconcile_failed * on(cluster) group_left() max by(cluster) (kubermatic_cluster_created)
+          - kubermatic_addon_reconcile_failed * on(cluster) group_left() max by(cluster) (kubermatic_cluster_deleted)
           > 0
         for: 30m
         labels:
