--- a/charts/monitoring/prometheus/rules/general-kube-state-metrics.yaml
+++ b/charts/monitoring/prometheus/rules/general-kube-state-metrics.yaml
@@ -187,7 +187,7 @@ groups:
         annotations:
           message: CronJob {{ $labels.namespace }}/{{ $labels.cronjob }} is taking more than 1h to complete.
           runbook_url: https://docs.kubermatic.com/kubermatic/main/cheat-sheets/alerting-runbook/#alert-kubecronjobrunning
-        expr: time() - kube_cronjob_next_schedule_time{job="kube-state-metrics"} > 3600
+        expr: "time() - kube_cronjob_next_schedule_time{job=\"kube-state-metrics\"} > max by(namespace, cronjob) (\n  kube_cronjob_next_schedule_time - \n  kube_cronjob_status_last_schedule_time\n)\n"
         for: 1h
         labels:
           severity: warning
