--- a/.golangci.apis.yml
+++ b/.golangci.apis.yml
@@ -13,6 +13,7 @@
 # limitations under the License.
 
 run:
+  timeout: 3m
   modules-download-mode: readonly
   skip-files:
     - zz_generated.*.go
