Support for configuring dex theme via values.yaml
Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/charts/oauth/templates/secrets.yaml
+++ b/charts/oauth/templates/secrets.yaml
@@ -29,6 +29,11 @@ kind: Secret
 metadata:
   name: themes
 data:
+{{- define "assets" -}}
 {{- range $name, $content := .Files.Glob "theme/*" }}
   {{ replace "theme/" "" $name }}: {{ $content | toString | b64enc | quote }}
 {{- end -}}
+{{- end }}
+
+{{- $assets := include "assets" . | fromYaml }}
+{{- mergeOverwrite $assets .Values.dex.theme | toYaml | nindent 2 }}
