[release/v2.23] Fix reconcile loop for seed-proxy on Kubernetes 1.27 (#12557)

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -16,7 +16,7 @@ run:
   # concurrency=1 lowers memory usage a bit
   concurrency: 1
   modules-download-mode: readonly
-  deadline: 20m
+  timeout: 30m
   build-tags:
     - ce
     - cloud
