--- a/addons/csi/aws-ebs/driver.yaml
+++ b/addons/csi/aws-ebs/driver.yaml
@@ -27,8 +27,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.18.0
-    app.kubernetes.io/version: "1.18.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.22.0
+    app.kubernetes.io/version: "1.22.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 spec:
@@ -48,10 +48,11 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.18.0
-    app.kubernetes.io/version: "1.18.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.22.0
+    app.kubernetes.io/version: "1.22.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
+automountServiceAccountToken: true
 ---
 # Source: aws-ebs-csi-driver/templates/serviceaccount-csi-node.yaml
 apiVersion: v1
@@ -62,10 +63,11 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.18.0
-    app.kubernetes.io/version: "1.18.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.22.0
+    app.kubernetes.io/version: "1.22.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
+automountServiceAccountToken: true
 ---
 # Source: aws-ebs-csi-driver/templates/clusterrole-attacher.yaml
 kind: ClusterRole
@@ -75,8 +77,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.18.0
-    app.kubernetes.io/version: "1.18.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.22.0
+    app.kubernetes.io/version: "1.22.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 rules:
@@ -104,14 +106,14 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.18.0
-    app.kubernetes.io/version: "1.18.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.22.0
+    app.kubernetes.io/version: "1.22.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 rules:
   - apiGroups: [""]
     resources: ["nodes"]
-    verbs: ["get"]
+    verbs: ["get", "patch"]
 ---
 # Source: aws-ebs-csi-driver/templates/clusterrole-provisioner.yaml
 kind: ClusterRole
@@ -121,8 +123,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.18.0
-    app.kubernetes.io/version: "1.18.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.22.0
+    app.kubernetes.io/version: "1.22.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 rules:
@@ -150,9 +152,6 @@ rules:
   - apiGroups: [ "" ]
     resources: [ "nodes" ]
     verbs: [ "get", "list", "watch" ]
-  - apiGroups: [ "coordination.k8s.io" ]
-    resources: [ "leases" ]
-    verbs: [ "get", "watch", "list", "delete", "update", "create" ]
   - apiGroups: [ "storage.k8s.io" ]
     resources: [ "volumeattachments" ]
     verbs: [ "get", "list", "watch" ]
@@ -165,8 +164,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.18.0
-    app.kubernetes.io/version: "1.18.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.22.0
+    app.kubernetes.io/version: "1.22.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 rules:
@@ -202,8 +201,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.18.0
-    app.kubernetes.io/version: "1.18.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.22.0
+    app.kubernetes.io/version: "1.22.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 rules:
@@ -235,8 +234,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.18.0
-    app.kubernetes.io/version: "1.18.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.22.0
+    app.kubernetes.io/version: "1.22.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 subjects:
@@ -256,8 +255,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.18.0
-    app.kubernetes.io/version: "1.18.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.22.0
+    app.kubernetes.io/version: "1.22.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 subjects:
@@ -277,8 +276,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.18.0
-    app.kubernetes.io/version: "1.18.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.22.0
+    app.kubernetes.io/version: "1.22.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 subjects:
@@ -298,8 +297,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.18.0
-    app.kubernetes.io/version: "1.18.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.22.0
+    app.kubernetes.io/version: "1.22.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 subjects:
@@ -319,8 +318,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.18.0
-    app.kubernetes.io/version: "1.18.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.22.0
+    app.kubernetes.io/version: "1.22.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 subjects:
@@ -330,6 +329,39 @@ subjects:
 roleRef:
   kind: ClusterRole
   name: ebs-external-snapshotter-role
+  apiGroup: rbac.authorization.k8s.io
+---
+# Source: aws-ebs-csi-driver/templates/role-leases.yaml
+kind: Role
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  namespace: kube-system
+  name: ebs-csi-leases-role
+rules:
+- apiGroups: ["coordination.k8s.io"]
+  resources: ["leases"]
+  verbs: ["get", "watch", "list", "delete", "update", "create"]
+---
+# Source: aws-ebs-csi-driver/templates/rolebinding-leases.yaml
+kind: RoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: ebs-csi-leases-rolebinding
+  namespace: kube-system
+  labels:
+    app.kubernetes.io/name: aws-ebs-csi-driver
+    app.kubernetes.io/instance: aws-ebs-csi-driver
+    helm.sh/chart: aws-ebs-csi-driver-2.22.0
+    app.kubernetes.io/version: "1.22.0"
+    app.kubernetes.io/component: csi-driver
+    app.kubernetes.io/managed-by: Helm
+subjects:
+- kind: ServiceAccount
+  name: ebs-csi-controller-sa
+  namespace: kube-system
+roleRef:
+  kind: Role
+  name: ebs-csi-leases-role
   apiGroup: rbac.authorization.k8s.io
 ---
 # Source: aws-ebs-csi-driver/templates/node.yaml
@@ -342,8 +374,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.18.0
-    app.kubernetes.io/version: "1.18.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.22.0
+    app.kubernetes.io/version: "1.22.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 spec:
@@ -362,8 +394,8 @@ spec:
         app: ebs-csi-node
         app.kubernetes.io/name: aws-ebs-csi-driver
         app.kubernetes.io/instance: aws-ebs-csi-driver
-        helm.sh/chart: aws-ebs-csi-driver-2.18.0
-        app.kubernetes.io/version: "1.18.0"
+        helm.sh/chart: aws-ebs-csi-driver-2.22.0
+        app.kubernetes.io/version: "1.22.0"
         app.kubernetes.io/component: csi-driver
         app.kubernetes.io/managed-by: Helm
     spec:
@@ -391,7 +423,7 @@ spec:
           type: RuntimeDefault
       containers:
         - name: ebs-plugin
-          image: {{ Image "public.ecr.aws/ebs-csi-driver/aws-ebs-csi-driver:v1.18.0" }}
+          image: {{ Image "public.ecr.aws/ebs-csi-driver/aws-ebs-csi-driver:v1.22.0" }}
           imagePullPolicy: IfNotPresent
           args:
             - node
@@ -405,7 +437,6 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: spec.nodeName
-          envFrom:
           volumeMounts:
             - name: kubelet-dir
               mountPath: /var/lib/kubelet
@@ -428,7 +459,6 @@ spec:
             failureThreshold: 5
           resources:
             limits:
-              cpu: 100m
               memory: 256Mi
             requests:
               cpu: 10m
@@ -437,7 +467,7 @@ spec:
             privileged: true
             readOnlyRootFilesystem: true
         - name: node-driver-registrar
-          image: {{ Image "public.ecr.aws/eks-distro/kubernetes-csi/node-driver-registrar:v2.7.0-eks-1-26-7" }}
+          image: {{ Image "public.ecr.aws/eks-distro/kubernetes-csi/node-driver-registrar:v2.8.0-eks-1-27-9" }}
           imagePullPolicy: IfNotPresent
           args:
             - --csi-address=$(ADDRESS)
@@ -448,7 +478,6 @@ spec:
               value: /csi/csi.sock
             - name: DRIVER_REG_SOCK_PATH
               value: /var/lib/kubelet/plugins/ebs.csi.aws.com/csi.sock
-          envFrom:
           livenessProbe:
             exec:
               command:
@@ -457,6 +486,7 @@ spec:
                 - --mode=kubelet-registration-probe
             initialDelaySeconds: 30
             timeoutSeconds: 15
+            periodSeconds: 90
           volumeMounts:
             - name: plugin-dir
               mountPath: /csi
@@ -466,7 +496,6 @@ spec:
               mountPath: /var/lib/kubelet/plugins/ebs.csi.aws.com/
           resources:
             limits:
-              cpu: 100m
               memory: 256Mi
             requests:
               cpu: 10m
@@ -475,17 +504,15 @@ spec:
             allowPrivilegeEscalation: false
             readOnlyRootFilesystem: true
         - name: liveness-probe
-          image: {{ Image "public.ecr.aws/eks-distro/kubernetes-csi/livenessprobe:v2.9.0-eks-1-26-7" }}
+          image: {{ Image "public.ecr.aws/eks-distro/kubernetes-csi/livenessprobe:v2.10.0-eks-1-27-9" }}
           imagePullPolicy: IfNotPresent
           args:
             - --csi-address=/csi/csi.sock
-          envFrom:
           volumeMounts:
             - name: plugin-dir
               mountPath: /csi
           resources:
             limits:
-              cpu: 100m
               memory: 256Mi
             requests:
               cpu: 10m
@@ -523,8 +550,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.18.0
-    app.kubernetes.io/version: "1.18.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.22.0
+    app.kubernetes.io/version: "1.22.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 spec:
@@ -544,8 +571,8 @@ spec:
         app: ebs-csi-controller
         app.kubernetes.io/name: aws-ebs-csi-driver
         app.kubernetes.io/instance: aws-ebs-csi-driver
-        helm.sh/chart: aws-ebs-csi-driver-2.18.0
-        app.kubernetes.io/version: "1.18.0"
+        helm.sh/chart: aws-ebs-csi-driver-2.22.0
+        app.kubernetes.io/version: "1.22.0"
         app.kubernetes.io/component: csi-driver
         app.kubernetes.io/managed-by: Helm
     spec:
@@ -589,13 +616,14 @@ spec:
           type: RuntimeDefault
       containers:
         - name: ebs-plugin
-          image: {{ Image "public.ecr.aws/ebs-csi-driver/aws-ebs-csi-driver:v1.18.0" }}
+          image: {{ Image "public.ecr.aws/ebs-csi-driver/aws-ebs-csi-driver:v1.22.0" }}
           imagePullPolicy: IfNotPresent
           args:
             - controller
             - --endpoint=$(CSI_ENDPOINT)
             - --k8s-tag-cluster-id={{ .Cluster.Name }}
             - --logging-format=text
+            - --user-agent-extra=helm
             - --v=2
           env:
             - name: CSI_ENDPOINT
@@ -622,7 +650,6 @@ spec:
                   name: aws-meta
                   key: endpoint
                   optional: true
-          envFrom:
           volumeMounts:
             - name: socket-dir
               mountPath: /var/lib/csi/sockets/pluginproxy/
@@ -648,7 +675,6 @@ spec:
             failureThreshold: 5
           resources:
             limits:
-              cpu: 100m
               memory: 256Mi
             requests:
               cpu: 10m
@@ -657,7 +683,7 @@ spec:
             allowPrivilegeEscalation: false
             readOnlyRootFilesystem: true
         - name: csi-provisioner
-          image: {{ Image "public.ecr.aws/eks-distro/kubernetes-csi/external-provisioner:v3.4.1-eks-1-26-7" }}
+          image: {{ Image "public.ecr.aws/eks-distro/kubernetes-csi/external-provisioner:v3.5.0-eks-1-27-9" }}
           imagePullPolicy: IfNotPresent
           args:
             - --csi-address=$(ADDRESS)
@@ -669,13 +695,11 @@ spec:
           env:
             - name: ADDRESS
               value: /var/lib/csi/sockets/pluginproxy/csi.sock
-          envFrom:
           volumeMounts:
             - name: socket-dir
               mountPath: /var/lib/csi/sockets/pluginproxy/
           resources:
             limits:
-              cpu: 100m
               memory: 256Mi
             requests:
               cpu: 10m
@@ -684,7 +708,7 @@ spec:
             allowPrivilegeEscalation: false
             readOnlyRootFilesystem: true
         - name: csi-attacher
-          image: {{ Image "public.ecr.aws/eks-distro/kubernetes-csi/external-attacher:v4.2.0-eks-1-26-7" }}
+          image: {{ Image "public.ecr.aws/eks-distro/kubernetes-csi/external-attacher:v4.3.0-eks-1-27-9" }}
           imagePullPolicy: IfNotPresent
           args:
             - --csi-address=$(ADDRESS)
@@ -693,13 +717,11 @@ spec:
           env:
             - name: ADDRESS
               value: /var/lib/csi/sockets/pluginproxy/csi.sock
-          envFrom:
           volumeMounts:
             - name: socket-dir
               mountPath: /var/lib/csi/sockets/pluginproxy/
           resources:
             limits:
-              cpu: 100m
               memory: 256Mi
             requests:
               cpu: 10m
@@ -708,22 +730,21 @@ spec:
             allowPrivilegeEscalation: false
             readOnlyRootFilesystem: true
         - name: csi-resizer
-          image: {{ Image "public.ecr.aws/eks-distro/kubernetes-csi/external-resizer:v1.7.0-eks-1-26-7" }}
+          image: {{ Image "public.ecr.aws/eks-distro/kubernetes-csi/external-resizer:v1.8.0-eks-1-27-9" }}
           imagePullPolicy: IfNotPresent
           args:
             - --csi-address=$(ADDRESS)
             - --v=2
             - --handle-volume-inuse-error=false
+            - --leader-election=true
           env:
             - name: ADDRESS
               value: /var/lib/csi/sockets/pluginproxy/csi.sock
-          envFrom:
           volumeMounts:
             - name: socket-dir
               mountPath: /var/lib/csi/sockets/pluginproxy/
           resources:
             limits:
-              cpu: 100m
               memory: 256Mi
             requests:
               cpu: 10m
@@ -732,17 +753,15 @@ spec:
             allowPrivilegeEscalation: false
             readOnlyRootFilesystem: true
         - name: liveness-probe
-          image: {{ Image "public.ecr.aws/eks-distro/kubernetes-csi/livenessprobe:v2.9.0-eks-1-26-7" }}
+          image: {{ Image "public.ecr.aws/eks-distro/kubernetes-csi/livenessprobe:v2.10.0-eks-1-27-9" }}
           imagePullPolicy: IfNotPresent
           args:
             - --csi-address=/csi/csi.sock
-          envFrom:
           volumeMounts:
             - name: socket-dir
               mountPath: /csi
           resources:
             limits:
-              cpu: 100m
               memory: 256Mi
             requests:
               cpu: 10m
@@ -762,8 +781,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.18.0
-    app.kubernetes.io/version: "1.18.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.22.0
+    app.kubernetes.io/version: "1.22.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 spec:
