--- a/addons/cluster-autoscaler/cluster-autoscaler.yaml
+++ b/addons/cluster-autoscaler/cluster-autoscaler.yaml
@@ -25,6 +25,9 @@
 {{ if eq .Cluster.MajorMinorVersion "1.27" }}
 {{ $version = "v1.27.3" }}
 {{ end }}
+{{ if eq .Cluster.MajorMinorVersion "1.27" }}
+{{ $version = "v1.27.3"}}
+{{ end }}
 
 {{ if not (eq $version "UNSUPPORTED") }}
 ---
