--- a/addons/csi/azure-snapshot-controller/csi-snapshot-controller.yaml
+++ b/addons/csi/azure-snapshot-controller/csi-snapshot-controller.yaml
@@ -12,13 +12,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-# Source: https://github.com/kubernetes-sigs/azuredisk-csi-driver/blob/v1.27.0/deploy/csi-snapshot-controller.yaml
+# Source: https://github.com/kubernetes-sigs/azuredisk-csi-driver/blob/v1.28.0/deploy/v1.28.0/csi-snapshot-controller.yaml
 #
 # Changes:
 # - template image registry
-# - add security context
 # - set replicas=1 (pod has a leader election)
-# - add CPU limit of 1
+# - set CPU limit to 1
+
 {{ if .Cluster.Features.Has "externalCloudProvider" }}
 {{ if eq .Cluster.CloudProviderName "azure" }}
 ---
@@ -32,6 +32,15 @@ spec:
   selector:
     matchLabels:
       app: csi-snapshot-controller
+  # the snapshot controller won't be marked as ready if the v1 CRDs are unavailable
+  # in #504 the snapshot-controller will exit after around 7.5 seconds if it
+  # can't find the v1 CRDs so this value should be greater than that
+  minReadySeconds: 15
+  strategy:
+    rollingUpdate:
+      maxSurge: 0
+      maxUnavailable: 1
+    type: RollingUpdate
   template:
     metadata:
       labels:
@@ -46,7 +55,7 @@ spec:
           type: RuntimeDefault
       containers:
         - name: csi-snapshot-controller
-          image: {{ Image "mcr.microsoft.com/oss/kubernetes-csi/snapshot-controller:v5.0.1" }}
+          image: {{ Image "mcr.microsoft.com/oss/kubernetes-csi/snapshot-controller:v6.2.2" }}
           args:
             - "--v=2"
             - "--leader-election=true"
